--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,9 @@ jobs:
   build:
     docker:
       - image: circleci/node:8@sha256:ff2c2a3fd5105396697de4c20139435fe9f47d62716fa241d225122deb711d50
-      - image: circleci/mysql:8.0.3@sha256:ea4c062323a944b9152137a62f5b2c8b3d5e235d98af66675871506a1bf6cc6e
+      - image: mongo:3.7.9@sha256:736eec20a17eafaa988d299902fcaab521cb0ca56af4400f782576afc878d6bc
     environment:
       - NPM_CONFIG_LOGLEVEL: warn
-      - KNEX_DATABASE: circle_test
-      - KNEX_USER: root
     working_directory: ~/repo
     steps:
       - checkout
